update top menu

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,8 +54,8 @@
       <section>
         <nav>
           <a href="{{ "/" | absolute_url }}">Overview</a> |
-          <a href="demo.pdf">demo output</a> |
-          <a href="demo.Rmd">demo Rmd</a>
+          <a href="demo.pdf">demo output (from Rmd)</a> |
+          <a href="python-in-Rstudio">Python chunks in RStudio<a> |
         </nav>
         <p></p>
 
