--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,7 +55,7 @@
         <nav>
           <a href="{{ "/" | absolute_url }}">Overview</a> |
           <a href="demo.pdf">demo output (from Rmd)</a> |
-          <a href="python-in-Rstudio">Python chunks in RStudio<a> |
+          <a href="python-in-Rstudio">Python chunks in RStudio<a> 
         </nav>
         <p></p>
 
