--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,7 +54,7 @@
       <section>
         <nav>
           <a href="{{ "/" | absolute_url }}">Overview</a> |
-          <a href="demo.pdf">demo output (from Rmd)</a> |
+          <a href="demo">demo (HTML) output (from Rmd source)</a> |
           <a href="python-in-Rstudio">Python chunks in RStudio<a> 
         </nav>
         <p></p>
