monkeying to try to remove dynamic highlighting at tops of pages

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,9 +53,9 @@
       </header>
       <section>
         <nav>
-          <a href="{{ "/" | absolute_url }}">Overview</a> |
+          <a href="{{ "/" | absolute_url }}">Main content</a> |
           <a href="demo">demo (HTML) output (from Rmd source)</a> |
-          <a href="python-in-Rstudio">Python chunks in RStudio<a> 
+          <a href="python_in_Rstudio">Python chunks in RStudio<a> 
         </nav>
         <p></p>
 
