--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,7 +55,7 @@
         <nav>
           <a href="{{ "/" | absolute_url }}">Main content</a> |
           <a href="demo">demo (HTML) output (from Rmd source)</a> |
-          <a href="python_in_Rstudio">Python chunks in RStudio</a> 
+          <a href="python-in-Rstudio">Python chunks in RStudio</a> 
         </nav>
         <p></p>
 
