--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,14 +52,16 @@
         
       </header>
       <section>
+        <div class="menu">
         <nav>
           <a href="{{ "/" | absolute_url }}">Main content</a> |
           <a href="demo">demo (HTML) output (from Rmd source)</a> |
           <a href="python-in-RStudio">Python chunks in RStudio</a> 
         </nav>
-        <p></p>
-
-      {{ content }}
+        </div>
+        <div class="main">
+          {{ content }}
+        </div>
 
       </section>
       <footer>
