test p line height at 1.5

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -15,7 +15,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 p, ul, ol, table, pre, dl {
-  margin:0 0 20px;
+    margin:0 0 20px;
+    line-height: 1.5;
 }
 
 h1, h2, h3 {
