various edits to qmd example

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,6 +56,7 @@
         <nav>
           <a href="{{ "/" | absolute_url }}">Main content</a> |
           <a href="demo">demo (HTML) output (from Rmd source)</a> |
+          <a href="demo-q">demo (HTML) output (from qmd source)</a> |
           <a href="python-in-RStudio">Python chunks in RStudio</a> 
         </nav>
         </div>
