--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,8 +55,8 @@
         <div class="menu">
         <nav>
           <a href="{{ "/" | absolute_url }}">Main content</a> |
-          <a href="demo">demo (HTML) output (from Rmd source)</a> |
-          <a href="demo-q">demo (HTML) output (from qmd source)</a> |
+          <a href="demo">Rmd output example</a> |
+          <a href="demo-q">qmd output example</a> |
           <a href="python-in-RStudio">Python chunks in RStudio</a> 
         </nav>
         </div>
